run deep inspection with multi threading & excel report start